@@ -1,4 +1,7 @@
 <tal:i18n i18n:domain="icemac.addressbook">
   <h2 i18n:translate="">Persons</h2>
   <div tal:replace="structure view/renderTable" />
+  <div class="batch">
+    <div tal:replace="structure view/renderBatch" />
+  </div>
 </tal:i18n>
